<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_splash"
    tools:context=".SplashActivity">

    <RelativeLayout
        android:id="@+id/rl_activation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/bg_activation"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/rl_toptext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_top_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/tv_activation_top_text_one"
                android:textColor="@color/color_white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_top_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_top_one"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1dp"
                android:text="@string/tv_activation_top_text_two"
                android:textColor="@color/color_white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_top_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_top_two"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/tv_activation_top_text_three"
                android:textColor="@color/color_white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_top_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_top_three"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1dp"
                android:text="@string/tv_activation_top_text_four"
                android:textColor="@color/color_white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_top_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_top_four"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1dp"
                android:text="@string/tv_activation_top_text_five"
                android:textColor="@color/color_white"
                android:textSize="15sp" />


            <RelativeLayout
                android:id="@+id/rl_btn_membership_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/tv_top_five"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_btn_membership_number">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/tv_btn_membership_number"
                    android:textColor="@color/color_black"
                    android:textSize="20sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_btn_activation_code"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/rl_btn_membership_number"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_btn_membership_number">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/tv_btn_activation_code"
                    android:textColor="@color/color_black"
                    android:textSize="20sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_btn_activate_now"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@id/rl_btn_activation_code"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_btn_activate_now">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/tv_btn_activate_now"
                    android:textColor="@color/color_white"
                    android:textSize="20sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_toggle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/rl_btn_activate_now"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp">

                <ToggleButton
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/toggle_selector"
                    android:textOff=""
                    android:textOn="" />

            </RelativeLayout>


        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
